trunk/Archive2/4e/f6e396caff12ba/output
main.cpp:16:37: error: use of undeclared identifier 'p7'
int seqhdrlen = asn1_simple_hdr_len(p7->data,
                                    ^
main.cpp:17:14: error: use of undeclared identifier 'p7'
                                                                        p7->length);
                                                                        ^
2 errors generated.
